--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <!-- Sản phẩm mới: Beauty More Collagen -->
   <div class="product">
-    <img src="60c3260d-9580-4c2b-9ac1-71be02a0cf62jpg" alt="Beauty More Collagen">
+    <img src="60c3260d-9580-4c2b-9ac1-71be02a0cf62.png" alt="Beauty More Collagen">
     <div class="info">
       <h2>Beauty More Collagen</h2>
       <p><strong>Dạng:</strong> Nước uống bổ sung Collagen</p>
