--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <!-- Sản phẩm 1 -->
   <div class="product">
-    <img src="tra_thao_duoc.jpg" alt="Trà Thảo Dược">
+    <img src="z6826498043653_173d59a2b0bdf6bff0b3ae04c63489ca.jpg" alt="Trà Thảo Dược">
     <div class="info">
       <h2>Trà Thảo Dược Summit</h2>
       <p><strong>Thành phần:</strong> Lá sen, atiso, cam thảo, khổ qua,...</p>
