--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -39,6 +38,11 @@
 </head>
 <body>
 
+  <!-- Logo Eagle Team -->
+  <div style="text-align: center; margin-bottom: 40px;">
+    <img src="z6831928265697_bdcd14cc420c11d3a1636e5f34b5d8f0.png" alt="Eagle Team Logo" style="height: 120px;">
+  </div>
+
   <!-- Sản phẩm 1 -->
   <div class="product">
     <img src="z6826498043653_173d59a2b0bdf6bff0b3ae04c63489ca.jpg" alt="Trà Thảo Dược">
@@ -72,7 +76,6 @@
     </div>
   </div>
 
-
   <!-- Sản phẩm mới: Beauty More Collagen -->
   <div class="product">
     <img src="60c3260d-9580-4c2b-9ac1-71be02a0cf62.png" alt="Beauty More Collagen">
@@ -93,6 +96,6 @@
       <p><strong>Bảo quản:</strong> Nơi khô ráo, thoáng mát, tránh ánh nắng trực tiếp.</p>
     </div>
   </div>
+
 </body>
 </html>
-
