--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <!-- Logo Eagle Team -->
   <div style="text-align: center; margin-bottom: 40px;">
-    <img src="z6831928265697_bdcd14cc420c11d3a1636e5f34b5d8f0.png" alt="Eagle Team Logo" style="height: 120px;">
+    <img src="z6831928265697_bdcd14cc420c11d3a1636e5f34b5d8f0.jpg" alt="Eagle Team Logo" style="height: 120px;">
   </div>
 
   <!-- Sản phẩm 1 -->
