--- a/index.html
+++ b/index.html
@@ -97,5 +97,32 @@
     </div>
   </div>
 
+  <!-- Sản phẩm 4: Bộ dưỡng da Aris -->
+<div class="product">
+  <img src="z6814382438620_a7eab3fed1460b2f12446d44552037f4.jpg" alt="Bộ dưỡng da Aris">
+  <div class="info">
+    <h2>Bộ Dưỡng Da Aris – 3 sản phẩm</h2>
+    
+    <p><strong>1. Cleansing Foam Plus+ (100ml):</strong></p>
+    <ul>
+      <li><strong>Công dụng:</strong> Làm sạch sâu, loại bỏ bụi bẩn và dầu thừa, cung cấp độ ẩm và làm dịu da.</li>
+      <li><strong>Thành phần:</strong> Glycerin, Sodium Hyaluronate, chiết xuất trà xanh hoặc nha đam,...</li>
+    </ul>
+
+    <p><strong>2. CC Cream – Concealer + Sunscreen (50ml):</strong></p>
+    <ul>
+      <li><strong>Công dụng:</strong> Che khuyết điểm nhẹ, chống nắng, làm đều màu da, tạo lớp nền mịn tự nhiên.</li>
+      <li><strong>Thành phần:</strong> Titanium Dioxide, Niacinamide (Vitamin B3), chiết xuất thảo dược,...</li>
+    </ul>
+
+    <p><strong>3. Iris Cream In Night (hũ):</strong></p>
+    <ul>
+      <li><strong>Công dụng:</strong> Dưỡng ẩm sâu ban đêm, phục hồi và tái tạo da, giúp da sáng khỏe.</li>
+      <li><strong>Thành phần:</strong> Collagen, chiết xuất ngọc trai, vitamin E, tinh chất thảo dược,...</li>
+    </ul>
+
+    <p><strong>Hướng dẫn sử dụng:</strong> Dùng buổi sáng và tối theo từng bước. Làm sạch da → thoa CC Cream (sáng) hoặc Night Cream (tối).</p>
+  </div>
+</div>
 </body>
 </html>
