--- a/index.html
+++ b/index.html
@@ -123,5 +123,17 @@
     <p><strong>Hướng dẫn sử dụng:</strong> Dùng buổi sáng và tối theo từng bước. Làm sạch da → thoa CC Cream (sáng) hoặc Night Cream (tối).</p>
   </div>
 </div>
+
+<!-- Sản phẩm 5: PURI ACTIVE+ -->
+<div class="product">
+  <img src="vn-11134207-7r98o-lz0u2xqipy1t2b.jpeg" alt="PURI ACTIVE+">
+  <div class="info">
+    <h2>PURI ACTIVE+ – Bột Diệp Lục Giải Độc</h2>
+    <p><strong>Thành phần:</strong> Diệp lục, Chlorella, Atiso, Trà xanh, Táo, Collagen, Enzyme tiêu hóa,...</p>
+    <p><strong>Công dụng:</strong> Thanh lọc cơ thể, hỗ trợ thải độc gan và đường ruột, làm đẹp da, tăng đề kháng.</p>
+    <p><strong>Cách dùng:</strong> Pha 1 gói với 100–150ml nước, khuấy đều và uống. Dùng 1–2 lần/ngày trước bữa ăn.</p>
+    <p><strong>Bảo quản:</strong> Nơi khô ráo, thoáng mát, tránh ánh nắng trực tiếp. Đóng kín gói sau khi mở.</p>
+  </div>
+</div>
 </body>
 </html>
