--- a/index.html
+++ b/index.html
@@ -55,15 +55,17 @@
   </div>
 
   <!-- Sản phẩm 2 -->
-  <div class="product">
-    <img src="prosure_energy.jpg" alt="Sữa Prosure Energy">
-    <div class="info">
-      <h2>Sữa Prosure Energy</h2>
-      <p><strong>Thành phần:</strong> Đạm whey, protein, vitamin A, D, B, canxi, sắt,...</p>
-      <p><strong>Công dụng:</strong> Bổ sung dinh dưỡng cho người gầy, ốm yếu, tăng sức đề kháng.</p>
-      <p><strong>Cách dùng:</strong> Pha 6 muỗng với 190ml nước ấm, uống 1–2 lần/ngày.</p>
-    </div>
+<div class="product">
+  <img src="prosure_energy.jpg" alt="Sữa Prosure Energy">
+  <div class="info">
+    <h2>Sữa Prosure Energy – Thực phẩm bổ sung dinh dưỡng</h2>
+    <p><strong>Thành phần:</strong> Đạm Whey, Casein, Carbohydrate (Maltodextrin), chất béo thực vật, chất xơ hòa tan (FOS), vitamin A, D, E, C, nhóm B, canxi, sắt, kẽm, magiê,...</p>
+    <p><strong>Công dụng:</strong> Bổ sung dinh dưỡng cho người gầy yếu, sau ốm, hỗ trợ tăng cân và tăng sức đề kháng, hồi phục thể lực nhanh chóng.</p>
+    <p><strong>Cốt lõi sản phẩm:</strong> Cung cấp năng lượng đậm đặc và protein chất lượng cao cho người cần phục hồi hoặc tăng cân – phù hợp với người kém ăn, người cao tuổi hoặc đang điều trị bệnh.</p>
+    <p><strong>Cách dùng:</strong> Pha 6 muỗng gạt (khoảng 60g) với 190ml nước ấm (40–45°C). Dùng 1–2 lần/ngày sau bữa ăn hoặc trước khi ngủ.</p>
+    <p><strong>Bảo quản:</strong> Nơi khô ráo, thoáng mát, tránh ánh nắng trực tiếp. Sử dụng trong vòng 3 tuần sau khi mở nắp. Đậy kín nắp sau khi dùng.</p>
   </div>
+</div>
 
   <!-- Sản phẩm 3 -->
   <div class="product">
