--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <h2>Morning Cafe – Special Edition</h2>
       <p><strong>Thành phần:</strong> Cà phê hòa tan, kem thực vật, đường.</p>
       <p><strong>Công dụng:</strong> Giúp tỉnh táo, tăng hiệu suất làm việc, hương vị đậm đà.</p>
-      <p><strong>Cách dùng:</strong> Pha 1 gói với 100ml nước nóng, có thể thêm đá.</p>
+      <p><strong>Cách dùng:</strong> Pha 1 gói với 100ml nước nóng, có thể thêm đá khi pha 2 gói.</p>
     </div>
   </div>
 
