--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <div class="product">
   <img src="z6814382438620_a7eab3fed1460b2f12446d44552037f4.jpg" alt="Bộ dưỡng da Aris">
   <div class="info">
-    <h2>Bộ Dưỡng Da Aris – 3 sản phẩm</h2>
+    <h2>Bộ Dưỡng Da Aris – sản phẩm 3 in 1</h2>
     
     <p><strong>1. Cleansing Foam Plus+ (100ml):</strong></p>
     <ul>
