--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
   <!-- Sản phẩm 4: Bộ dưỡng da Aris -->
 <div class="product">
-  <img src="z6814382438620_a7eab3fed1460b2f12446d44552037f4.jpg" alt="Bộ dưỡng da Aris">
+  <img src="images.jpeg" alt="Bộ dưỡng da Aris">
   <div class="info">
     <h2>Bộ Dưỡng Da Aris – sản phẩm 3 in 1</h2>
     
