--- a/index.html
+++ b/index.html
@@ -59,7 +59,35 @@
   <img src="prosure_energy.jpg" alt="Sữa Prosure Energy">
   <div class="info">
     <h2>Sữa Prosure Energy – Thực phẩm bổ sung dinh dưỡng</h2>
-    <p><strong>Thành phần:</strong> Đạm Whey, Casein, Carbohydrate (Maltodextrin), chất béo thực vật, chất xơ hòa tan (FOS), vitamin A, D, E, C, nhóm B, canxi, sắt, kẽm, magiê,...</p>
+    <p><strong>Thành phần:</strong> Sữa bột béo, Bột kem không sữa (non dairy creamer CFI-Creamer 3SC), 
+    Sữa bột gầy, Đường tinh luyện hạt nhuyễn, 
+    Chất xơ inulin (Orafti GR), 
+    Bột béo ProFat MCT, 
+    Palatinose PST-N, 
+    Đạm whey cô đặc 80%, 
+    Bột sữa Non tách béo, 
+    Đường Maltodextrin (Maltodextrin MDX-1012), 
+    Collagen thủy phân, 
+    Tảo biển đỏ (Lithothamnium Aquamin F),
+    Hỗn hợp Vitamin & Khoáng chất:
+    Vitamin A (Retinyl acetate), 
+    Vitamin B1 (Thiamin mononitrate), 
+    Vitamin B12 (Cyanocobalamin), 
+    Vitamin B2 (Riboflavin), 
+    Vitamin B3 (Nicotinamide), 
+    Vitamin B6 (Pyridoxin HCl), 
+    Biotin, 
+    Vitamin C (Sodium ascorbate), 
+    Vitamin E (Vitamin E acetate), 
+    Vitamin D3 (Cholecalciferol), 
+    Folic Acid, 
+    N-Pteroyl-L-glutamic acid, 
+    Vitamin K1 (Vitamin K1 Trit), 
+    MgO (Magnesium oxide), 
+    Fe (Sắt III pyrophosphate), 
+    Zn (Kẽm sulfate), 
+    Chất ổn định (INS 415; INS 341 (iii)), 
+    Hương liệu tổng hợp (hương sữa, hương vanilla) dùng cho thực phẩm.</p>
     <p><strong>Công dụng:</strong> Bổ sung dinh dưỡng cho người gầy yếu, sau ốm, hỗ trợ tăng cân và tăng sức đề kháng, hồi phục thể lực nhanh chóng.</p>
     <p><strong>Cốt lõi sản phẩm:</strong> Cung cấp năng lượng đậm đặc và protein chất lượng cao cho người cần phục hồi hoặc tăng cân – phù hợp với người kém ăn, người cao tuổi hoặc đang điều trị bệnh.</p>
     <p><strong>Cách dùng:</strong> Pha 2 muỗng gạt (khoảng 60g) với 120ml nước ấm (40–45°C). Dùng 1–2 lần/ngày sau bữa ăn hoặc trước khi ngủ.</p>
