--- a/index.html
+++ b/index.html
@@ -165,5 +165,82 @@
     <p><strong>Bảo quản:</strong> Nơi khô ráo, thoáng mát, tránh ánh nắng trực tiếp. Đóng kín gói sau khi mở.</p>
   </div>
 </div>
+
+<!-- Sản phẩm mới: IRIS ACNE CREAM -->
+<div class="product">
+  <img src="z6836923257697_50335bb71e3017f4e10d6b8eb128395a.jpg" alt="IRIS Acne Cream">
+  <div class="info">
+    <h2>IRIS – Kem Trị Mụn</h2>
+    <p><strong>Công dụng:</strong></p>
+    <ul>
+      <li>Se khít lỗ chân lông</li>
+      <li>Giúp giảm và ngăn ngừa mụn</li>
+      <li>Làm mờ các vết sẹo thâm do mụn gây ra</li>
+      <li>Dưỡng trắng da</li>
+    </ul>
+
+    <p><strong>Hướng dẫn sử dụng:</strong></p>
+    <ol>
+      <li>Làm sạch da và lau khô (khuyên dùng sữa rửa mặt <em>IRIS – CLEANSING FOAM PLUS+</em>)</li>
+      <li>Thoa nhẹ hai lần vào buổi sáng và tối lên vùng da bị mụn</li>
+    </ol>
+  </div>
+</div>
+
+<!-- Sản phẩm mới: IRIS MELASMA NIGHT CREAM -->
+<div class="product">
+  <img src="z6836925378864_33900bc2d10765511cfdda8555769667.jpg" alt="IRIS Melasma Night Cream">
+  <div class="info">
+    <h2>IRIS – Kem Đêm Nám</h2>
+    <p><strong>Công dụng:</strong></p>
+    <ul>
+      <li>Giúp giảm dần và ngăn ngừa nám, sạm, tàn nhang, đồi mồi</li>
+      <li>Dưỡng trắng da, làm mềm mịn da và giữ ẩm</li>
+      <li>Giúp ngăn ngừa lão hóa da</li>
+    </ul>
+
+    <p><strong>Hướng dẫn sử dụng:</strong></p>
+    <ol>
+      <li>Dùng mỗi tối sau khi rửa mặt bằng <em>IRIS – CLEANSING FOAM PLUS+</em></li>
+      <li>Thoa một lớp mỏng lên da, massage nhẹ nhàng từ dưới lên trên và từ trong ra ngoài</li>
+      <li>Để kem thẩm thấu sâu vào da</li>
+    </ol>
+  </div>
+</div>
+
+<!-- Sản phẩm mới: Iris Shampoo 3 in 1 -->
+<div class="product">
+  <img src="iris_shampoo.jpg" alt="Iris Shampoo 3 in 1">
+  <div class="info">
+    <h2>Iris Shampoo 3 in 1 – Tắm, Gội, Dưỡng</h2>
+    <p><strong>Thể tích:</strong> 500ml (E 16.9 FL.OZ)</p>
+    <p><strong>Hương:</strong> Nước hoa Pháp</p>
+
+    <p><strong>✨ Công dụng:</strong></p>
+    <ul>
+      <li>Làm sạch da và tóc một cách nhẹ nhàng</li>
+      <li>Dưỡng ẩm, bảo vệ tóc và làn da</li>
+      <li>Làm mới làn da – Refresh skin</li>
+      <li>Nuôi dưỡng & bảo vệ tóc – Nourish & protect hair</li>
+      <li>Thơm lâu với hương nước hoa Pháp quyến rũ</li>
+    </ul>
+
+    <p><strong>🧪 Thành phần nổi bật:</strong></p>
+    <ul>
+      <li>Free Sulfate – Không chứa sulfate, an toàn cho da nhạy cảm</li>
+      <li>Free Silicon – Không chứa silicon, không gây bít lỗ chân lông</li>
+      <li>Phù hợp với mọi loại da – For all skin types</li>
+    </ul>
+
+    <p><strong>🧴 Cách dùng:</strong></p>
+    <ol>
+      <li>Làm ướt cơ thể và tóc</li>
+      <li>Lấy một lượng sản phẩm vừa đủ, tạo bọt</li>
+      <li>Massage nhẹ nhàng lên tóc và cơ thể</li>
+      <li>Xả sạch lại với nước</li>
+      <li>Có thể sử dụng hằng ngày</li>
+    </ol>
+  </div>
+</div>
 </body>
 </html>
