--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
 <!-- Sản phẩm mới: Iris Shampoo 3 in 1 -->
 <div class="product">
-  <img src="iris_shampoo.jpg" alt="Iris Shampoo 3 in 1">
+  <img src="z6836923253923_16e0fe4ecfb491517f8a6f24ee03b322.jpg" alt="Iris Shampoo 3 in 1">
   <div class="info">
     <h2>Iris Shampoo 3 in 1 – Tắm, Gội, Dưỡng</h2>
     <p><strong>Thể tích:</strong> 500ml (E 16.9 FL.OZ)</p>
