--- a/index.html
+++ b/index.html
@@ -100,7 +100,19 @@
     <img src="morning_cafe.jpg" alt="Morning Cafe">
     <div class="info">
       <h2>Morning Cafe – Special Edition</h2>
-      <p><strong>Thành phần:</strong> Cà phê hòa tan, kem thực vật, đường.</p>
+      <p><strong>Thành phần:</strong> Bột kem thực vật (Siro glucose khô, chất béo thực vật, chất ổn định INS 340(ii), 451(i))
+
+Protein sữa, chất nhũ hóa INS (471, 481(i)), chất chống đông vón INS 551
+
+Đường kính trắng
+
+Bột cà phê hòa tan (13%)
+
+Chất xơ hòa tan (Orafti)
+
+Collagen thủy phân (1.1%)
+
+Nấm, đinh lăng, táo đỏ, linh chi, maltodextrin, muối tinh, chất ổn định (INS 466), hương cà phê tổng hợp.</p>
       <p><strong>Công dụng:</strong> Giúp tỉnh táo, tăng hiệu suất làm việc, hương vị đậm đà.</p>
       <p><strong>Cách dùng:</strong> Pha 1 gói với 100ml nước nóng, có thể thêm đá khi pha 2 gói.</p>
     </div>
