--- a/index.html
+++ b/index.html
@@ -113,7 +113,11 @@ Chất xơ hòa tan (Orafti)
 Collagen thủy phân (1.1%)
 
 Nấm, đinh lăng, táo đỏ, linh chi, maltodextrin, muối tinh, chất ổn định (INS 466), hương cà phê tổng hợp.</p>
-      <p><strong>Công dụng:</strong> Giúp tỉnh táo, tăng hiệu suất làm việc, hương vị đậm đà.</p>
+      <p><strong>Công dụng:</strong> ✅ Giúp tỉnh táo, tăng năng lượng ngay từ ly đầu tiên
+✅ Hỗ trợ tăng cường trí nhớ, giảm căng thẳng tinh thần
+✅ Bổ sung collagen & thảo dược quý, làm đẹp da, chậm lão hóa
+✅ Cung cấp chất xơ, hỗ trợ hệ tiêu hóa khỏe mạnh
+✅ Thích hợp cho người làm việc văn phòng, học sinh – sinh viên ôn thi, người hay mất ngủ, mệt mỏi.</p>
       <p><strong>Cách dùng:</strong> Pha 1 gói với 100ml nước nóng, có thể thêm đá khi pha 2 gói.</p>
     </div>
   </div>
