--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <img src="z6826498043653_173d59a2b0bdf6bff0b3ae04c63489ca.jpg" alt="Trà Thảo Dược">
     <div class="info">
       <h2>Trà Thảo Dược Summit</h2>
-      <p><strong>Thành phần:</strong> Lá sen, atiso, cam thảo, khổ qua,...</p>
-      <p><strong>Công dụng:</strong> Thanh nhiệt, giải độc gan, hỗ trợ tiêu hóa, giảm cân.</p>
+      <p><strong>Thành phần:</strong> kim ngân, chi tử, cúc hoa, cam thảo, nhân trần.</p>
+      <p><strong>Công dụng:</strong> Thanh nhiệt, giải độc gan, hỗ trợ tiêu hóa, giảm huyết áp.</p>
       <p><strong>Cách dùng:</strong> Pha 1 túi với 200ml nước sôi, ngâm 3–5 phút, uống 1–2 lần/ngày.</p>
     </div>
   </div>
@@ -59,6 +59,7 @@
   <img src="prosure_energy.jpg" alt="Sữa Prosure Energy">
   <div class="info">
     <h2>Sữa Prosure Energy – Thực phẩm bổ sung dinh dưỡng</h2>
+
     <p><strong>Thành phần:</strong> Sữa bột béo, Bột kem không sữa (non dairy creamer CFI-Creamer 3SC), 
     Sữa bột gầy, Đường tinh luyện hạt nhuyễn, 
     Chất xơ inulin (Orafti GR), 
@@ -69,29 +70,45 @@
     Đường Maltodextrin (Maltodextrin MDX-1012), 
     Collagen thủy phân, 
     Tảo biển đỏ (Lithothamnium Aquamin F),
-    Hỗn hợp Vitamin & Khoáng chất:
-    Vitamin A (Retinyl acetate), 
-    Vitamin B1 (Thiamin mononitrate), 
-    Vitamin B12 (Cyanocobalamin), 
-    Vitamin B2 (Riboflavin), 
-    Vitamin B3 (Nicotinamide), 
-    Vitamin B6 (Pyridoxin HCl), 
-    Biotin, 
-    Vitamin C (Sodium ascorbate), 
-    Vitamin E (Vitamin E acetate), 
-    Vitamin D3 (Cholecalciferol), 
-    Folic Acid, 
-    N-Pteroyl-L-glutamic acid, 
-    Vitamin K1 (Vitamin K1 Trit), 
-    MgO (Magnesium oxide), 
-    Fe (Sắt III pyrophosphate), 
-    Zn (Kẽm sulfate), 
-    Chất ổn định (INS 415; INS 341 (iii)), 
-    Hương liệu tổng hợp (hương sữa, hương vanilla) dùng cho thực phẩm.</p>
-    <p><strong>Công dụng:</strong> Bổ sung dinh dưỡng cho người gầy yếu, sau ốm, hỗ trợ tăng cân và tăng sức đề kháng, hồi phục thể lực nhanh chóng.</p>
-    <p><strong>Cốt lõi sản phẩm:</strong> Cung cấp năng lượng đậm đặc và protein chất lượng cao cho người cần phục hồi hoặc tăng cân – phù hợp với người kém ăn, người cao tuổi hoặc đang điều trị bệnh.</p>
-    <p><strong>Cách dùng:</strong> Pha 2 muỗng gạt (khoảng 20g) với 100ml nước ấm (50–60°C). Dùng 1–2 lần/ngày sau bữa ăn hoặc trước khi ngủ.</p>
-    <p><strong>Bảo quản:</strong> Nơi khô ráo, thoáng mát, tránh ánh nắng trực tiếp. Sử dụng trong vòng 3 tuần sau khi mở nắp. Đậy kín nắp sau khi dùng.</p>
+    Hỗn hợp Vitamin & Khoáng chất: Vitamin A, B1, B2, B3, B6, B12, C, D3, E, K1, Biotin, Folic Acid, Sắt, Kẽm, Magie... 
+    Chất ổn định (INS 415; INS 341 (iii)), Hương liệu tổng hợp (hương sữa, hương vanilla) dùng cho thực phẩm.</p>
+
+    <p><strong>🩺 Công dụng:</strong></p>
+    <ul>
+      <li><strong>💪 Hỗ trợ phục hồi nhanh, tăng cân lành mạnh:</strong><br>
+        - Bổ sung năng lượng vượt trội từ Palatinose, MCT và Maltodextrin<br>
+        - Đạm whey cô đặc 80% + Collagen thủy phân giúp phục hồi mô cơ, tăng cơ nạc
+      </li>
+
+      <li><strong>🛡️ Tăng sức đề kháng:</strong><br>
+        - Cung cấp đầy đủ vitamin và khoáng chất thiết yếu<br>
+        - Tăng cường hệ miễn dịch, hỗ trợ phục hồi sau bệnh
+      </li>
+
+      <li><strong>🌿 Cải thiện tiêu hóa – Dễ hấp thu:</strong><br>
+        - Inulin (chất xơ hòa tan) giúp tăng lợi khuẩn, chống táo bón<br>
+        - Tảo biển đỏ cung cấp canxi hữu cơ cho xương chắc khỏe
+      </li>
+
+      <li><strong>🔋 Năng lượng bền bỉ – Không gây mệt mỏi:</strong><br>
+        - Không gây cảm giác ngấy, đầy bụng<br>
+        - Phù hợp với người ăn kém hoặc cần phục hồi thể lực
+      </li>
+    </ul>
+
+    <p><strong>👨‍👩‍👧‍👦 Phù hợp cho:</strong></p>
+    <ul>
+      <li>Người gầy yếu, suy nhược, sau ốm hoặc sau phẫu thuật</li>
+      <li>Người lớn tuổi cần bổ sung dinh dưỡng</li>
+      <li>Người muốn tăng cân an toàn, lành mạnh</li>
+      <li>Người có nhu cầu tăng đề kháng, phục hồi sức khỏe</li>
+    </ul>
+
+    <p><strong>🔬 Cốt lõi sản phẩm:</strong> Cung cấp năng lượng đậm đặc và protein chất lượng cao, phù hợp cho người cần phục hồi, tăng cân, người kém ăn, người cao tuổi hoặc đang điều trị bệnh.</p>
+
+    <p><strong>🧊 Cách dùng:</strong> Pha 2 muỗng gạt (~20g) với 100ml nước ấm (50–60°C). Uống 1–2 lần/ngày sau bữa ăn hoặc trước khi ngủ.</p>
+
+    <p><strong>📦 Bảo quản:</strong> Đậy kín sau khi mở nắp. Bảo quản nơi khô ráo, thoáng mát, tránh ánh nắng trực tiếp. Sử dụng trong vòng 3 tuần sau khi mở nắp.</p>
   </div>
 </div>
 
