--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ footer {
 </style>
 </head>
 <body>
-  <h1>🌸 Yiyi - Cô Bé Idol TikTok 2007 🌸</h1>
+  <h1>🌸 Cô Bé Idol TikTok Tên là Yiyi 2007 🌸</h1>
 
   <!-- Slider hình ảnh -->
   <div class="slider">
